--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,7 @@
 
     <modules>
         <module>lib-observability</module>
-        <!-- Adicione aqui outros módulos futuros -->
-
+        <module>lib-exception-handler</module>
     </modules>
 
     <properties>
@@ -28,7 +27,7 @@
         <!-- Versões centralizadas -->
         <spring.boot.version>3.2.0</spring.boot.version>
         <lombok.version>1.18.30</lombok.version>
-        <aspectj.version>1.9.20</aspectj.version>
+        <aspectj.version>1.9.21</aspectj.version>
     </properties>
 
     <dependencyManagement>
