--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <modules>
         <module>lib-observability</module>
         <module>lib-exception-handler</module>
+        <module>unified-service-core-starter</module>
     </modules>
 
     <properties>
@@ -28,6 +29,9 @@
         <spring.boot.version>3.2.0</spring.boot.version>
         <lombok.version>1.18.30</lombok.version>
         <aspectj.version>1.9.21</aspectj.version>
+        
+        <!-- Versionamento das libs -->
+        <lib.version>1.0.0</lib.version>
     </properties>
 
     <dependencyManagement>
@@ -37,6 +41,15 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
                 <version>${spring.boot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            
+            <!-- FIAP Unified Service Core Libraries BOM -->
+            <dependency>
+                <groupId>com.github.OtavioValadao</groupId>
+                <artifactId>unified-service-core-libs</artifactId>
+                <version>${project.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -50,6 +63,24 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.11.0</version>
+                </plugin>
+                
+                <!-- Plugin para versionamento automático -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-release-plugin</artifactId>
+                    <version>3.0.0</version>
+                    <configuration>
+                        <tagNameFormat>v@{project.version}</tagNameFormat>
+                        <autoVersionSubmodules>true</autoVersionSubmodules>
+                    </configuration>
+                </plugin>
+                
+                <!-- Plugin para deploy no GitHub Packages -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-deploy-plugin</artifactId>
+                    <version>3.1.1</version>
                 </plugin>
             </plugins>
         </pluginManagement>
