--- a/lib-bom/pom.xml
+++ b/lib-bom/pom.xml
@@ -5,13 +5,11 @@
          https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>com.github.OtavioValadao</groupId>
-        <artifactId>unified-service-core-libs</artifactId>
-        <version>1.0.0</version>
-    </parent>
+    <!-- REMOVA o <parent> daqui! -->
 
+    <groupId>com.github.OtavioValadao</groupId>
     <artifactId>lib-bom</artifactId>
+    <version>1.0.0</version>
     <packaging>pom</packaging>
 
     <name>Unified Service Core BOM</name>
