--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
     <groupId>com.github.OtavioValadao</groupId>
     <artifactId>unified-service-core-libs</artifactId>
-    <version>1.4.8</version>
+    <version>${revision}</version>
     <packaging>pom</packaging>
 
     <name>Unified Service Core Libraries</name>
@@ -20,10 +20,14 @@
         <module>lib-exception-handler</module>
         <module>lib-code-gen</module>
         <module>lib-send-notification</module>
+        <module>lib-pdf-generator</module>
     </modules>
 
     <!-- ====================== PROPRIEDADES ====================== -->
     <properties>
+
+        <revision>1.5.0</revision>
+
         <java.version>21</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
@@ -51,8 +55,6 @@
         <!-- Plugins -->
         <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
 
-        <!-- Versão das libs internas -->
-        <lib.version>1.0.16</lib.version>
     </properties>
 
     <!-- ====================== GERENCIAMENTO DE DEPENDÊNCIAS ====================== -->
