feat: add lib-use-case-base module with UseCase, Command and Query interfaces
- Add UseCase base interface for CQRS pattern
- Add Command interface for write operations
- Add Query interface for read operations
- Add comprehensive README with examples
- Update parent pom.xml to include new module
- Version: 1.5.1

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>lib-code-gen</module>
         <module>lib-send-notification</module>
         <module>lib-pdf-generator</module>
+        <module>lib-use-case-base</module>
     </modules>
 
     <!-- ====================== PROPRIEDADES ====================== -->
