feat: add lib-soft-delete module with SoftDeletable, SoftDeleteHelper and SoftDeleteRepository
- Add SoftDeletable interface for entities supporting soft delete
- Add SoftDeleteHelper service for standardized soft delete/activate operations
- Add SoftDeleteRepository base interface with helper methods
- Add comprehensive README with examples
- Update parent pom.xml to include new module
- Version: 1.5.3

--- a/pom.xml
+++ b/pom.xml
@@ -22,12 +22,13 @@
         <module>lib-send-notification</module>
         <module>lib-pdf-generator</module>
         <module>lib-use-case-base</module>
+        <module>lib-soft-delete</module>
     </modules>
 
     <!-- ====================== PROPRIEDADES ====================== -->
     <properties>
 
-        <revision>1.5.2</revision>
+        <revision>1.5.3</revision>
 
         <java.version>21</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
