fix: add Lombok and Hibernate dependencies to lib-soft-delete
- Add Lombok as provided dependency (required by EntityBase @Data)
- Add Hibernate Core as provided dependency (required by @CreationTimestamp/@UpdateTimestamp)
- EntityBase now compiles correctly

--- a/lib-soft-delete/pom.xml
+++ b/lib-soft-delete/pom.xml
@@ -32,6 +32,20 @@
             <artifactId>jakarta.persistence-api</artifactId>
             <scope>provided</scope>
         </dependency>
+
+        <!-- Lombok (provided - consumidor deve fornecer) -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
+        <!-- Hibernate Annotations (provided - consumidor deve fornecer) -->
+        <dependency>
+            <groupId>org.hibernate.orm</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 </project>
