--- a/lib-observability/pom.xml
+++ b/lib-observability/pom.xml
@@ -17,6 +17,10 @@
     <name>Observability Library</name>
     <description>Biblioteca para logging e aspectos de observabilidade em controllers e services</description>
 
+    <properties>
+        <spring-boot-starter-aop.version>${spring.boot.version}</spring-boot-starter-aop.version>
+    </properties>
+
     <dependencies>
         <!-- Spring Boot -->
         <dependency>
@@ -28,6 +32,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
+            <version>${spring-boot-starter-aop.version}</version>
             <scope>provided</scope>
         </dependency>
 
