fix: rename spring-boot-starter-aop to spring-boot-starter-aspectj for Spring Boot 4.0
- Spring Boot 4.0 renamed starter-aop to starter-aspectj
- Remove explicit version to use BOM management

--- a/lib-observability/pom.xml
+++ b/lib-observability/pom.xml
@@ -27,8 +27,7 @@
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-aop</artifactId>
-            <version>4.0.0</version>
+            <artifactId>spring-boot-starter-aspectj</artifactId>
             <scope>provided</scope>
         </dependency>
 
